# Base-Smart-Contract

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
app/: Cargo.toml  temp.rs
app/src/: lib.rs
app/src/services/: contract_service.rs
cargo-dot-config-files/: config.toml
client/: Cargo.toml
tests/: gtest.rs
tests/fixture/: mod.rs
