[workspace]

members = ["client"]

[package]
name = "contract"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
contract-app = { path = "app" }

[build-dependencies]
contract-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"
sails-client-gen = "0.8.1"

[dev-dependencies]
contract = { path = ".", features = ["wasm-binary"] }
contract-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
gstd = "1.8.1"
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []